--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongoose": "^8.19.1"
+    "leaflet": "^1.9.4",
+    "mongoose": "^8.19.1",
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
