--- a/package.json
+++ b/package.json
@@ -10,20 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "leaflet": "^1.9.4",
-    "mongodb": "^7.0.0",
-    "mongoose": "^8.19.3",
+    "mongoose": "^8.19.1",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.22",
-    "nodemon": "^3.1.10",
-    "postcss": "^8.5.6"
+    "nodemon": "^3.1.10"
   }
 }
